# Termbackup

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
termbackup/: __init__.py  audit.py  cli.py  config.py  crypto.py  daemon.py  delta.py  doctor.py  errors.py  github.py  manifest.py  models.py  restore.py  snapshot.py  ui.py  utils.py
termbackup/plugins/: __init__.py  hologram.py  shred.py  strict_audit.py  telemetry.py  tui.py
tests/: test_crypto.py  test_snapshot_restore.py
